# MPEResearch_WeedDetector

./: .gitignore  README.md  requirements.txt  setup.py  weed_detector_demo.py
cpptest/: CMakeLists.txt  houghtest.cpp  vitest.cpp
native_reassembler_module/: __init__.py  native_reassembler_module.pyi
native_reassembler_module/cpp/: CMakeLists.txt  Rect.h  bindings.cpp  packer.cpp  packer.h  reassembler.cpp  reassembler.h  reassembler_test.cpp  roi_extractor.cpp  roi_extractor.h  util.cpp  util.h
native_reassembler_module/cpp/test/: exgi_cmp2.cpp  exgi_comparison.cpp  exgi_vid.cpp
plots/: hist.py  misc_data.py  packer_eval.py  t.py
roiyolowd/: crop_row_finder.py  evaluation.py  native_reassembler.py  reassembler.py  roi_extractor.py  util.py  weed_detector.py  weed_detector_demo.py
testing/: README.md  _README.md  cam_GUI.py  camtest.py  cannytest.py  colorspace.ipynb  houghtest.py  mask_crop_rows.py  merge_rect_test.py  opticalflow1.py  opticalflow2.py  owls_method.py  packer_u.py  picamtest.py  ransac_test.py  reassembler_test.py  transform_and_preview.py  transform_and_preview_mp4.py  vegetation_indices.py  video_processing.py  vitest.py  yolotest.py  yolotest2.py
testing/perf/: README.md  imgproc.py  make_perf_cpp.py  perf_cpp.pyi  util.py  vegetation_indices.py  vi.py  vi_pybind.py  vi_python.py  yolov8_inf.py  yolov8_inf2.py
testing/perf/cpp/: CMakeLists.txt  bindings.cpp  exgi.cpp  exgi.h  exgi_test.cpp  hsv.cpp  hsv.h  hsv_test.cpp  inplace_test.cpp  perf.h
testing/perf/results/: Intel_i7-10750H.txt  rpi-4.txt  rpi-5.txt  rpi-zero.txt
yolo_tools/: yolo_pt2ncnn.py  yolo_slicer.py  yolo_test.py  yolo_train.py  yolo_video_test.py
